WIP protobuf serialization